--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>EducacionAmbiental</title>
+  <title>Biodiversidad De Tarija: Flora y Fauna</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Descubre la rica biodiversidad de Tarija, Bolivia, con información sobre su flora, fauna y ecosistemas únicos. Aprende sobre la conservación y las especies endémicas.">
   <link rel="icon" href="/src/assets/img/icons/logo.svg">
 </head>
 <body>
